Morgan package added and user remove changed

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DATABASE=mongodb+srv://username:password@cluster0.ggwvc.mongodb.net/?retryWrites=true&w=majority&appName=appname
 PORT=8000
-JWT_SECRET=Thisissecret
+JWT_SECRET_KEY=Thisissecret
 NODE_ENV=PRODUCTION
