--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-bootstrap": "^0.26.3"
+    "react-router-bootstrap": "^0.26.3",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
